# EdgeDetectionViewer

./: README.md  package.json  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/flamapp/edgedetection/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/: ExampleUnitTest.kt
gradle/buildOutputCleanup/: cache.properties
opencv/: README.md
web/: index.html  tsconfig.json  viewer.ts
